crates/djls-python/tests/snapshots/corpus__packages__django-oscar__src__oscar__templatetags__url_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.url_tags::tag::absolute_url":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: domain
        required: true
        kind: Variable
        position: 0
      - name: path
        required: true
        kind: Variable
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
