crates/djls-python/tests/snapshots/corpus__packages__django-oscar__src__oscar__templatetags__wishlist_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.wishlist_tags::tag::wishlists_containing_product":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: wishlists
        required: true
        kind: Variable
        position: 0
      - name: product
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
